M    toolkit/src/test/java/eu/clarin/cmd/toolkit/TestCMDToolkit.java A    toolkit/src/test/resources/toolkit/downgrade - added test for the downgrade of a 1.2 profile to 1.1 - validation of a 1.1 record agains a downgraded 1.2 profile - validation of a upgraded 1.1 record agains a 1.2 profile - validation of a upgraded 1.1 record agains a downgraded and upgraded (1.2 -> 1.1 -> 1.2) profile